Basic CSS: Import a Google Font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <a routerLink="/sass">Sass</a>
       </li>
       <li>
-        <a routerLink="/dv">DV</a>
+        <a routerLink="/basiccss">Basic Css</a>
       </li>
     </ul>
   </nav>
