Basic CSS: Specify How Fonts Should Degrade

--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -1,5 +1,5 @@
 <h1 style="text-align: center;">Basic Css</h1>
 
-<!-- Basic CSS: Import a Google Font -->
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<!--1.  Basic CSS: Import a Google Font -->
+<!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
 <h2 class="red-text">CatPhotoApp</h2>
