Basic CSS: Size Your Images

--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -1,7 +1,4 @@
 
-h2 {
-    font-family: Lobster, monospace;
-  }
-  .red-text {
-    color: red;
-  }
+h2 { font-family: Lobster, monospace; }
+.red-text { color: red; }
+.smaller-image{width:100px;}
