--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -3,3 +3,7 @@
 <!--1.  Basic CSS: Import a Google Font -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
 <h2 class="red-text">CatPhotoApp</h2>
+
+<a href="#">
+    <img class="smaller-image" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+</a>
