--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -2,4 +2,5 @@
 h2 { font-family: Lobster, monospace; }
 .red-text { color: red; }
 .smaller-image{width:100px;}
-.thick-green-border { border-color: green; border-width: 10px; border-style: solid; }
+.thick-green-border { border-color: green; border-width: 10px; border-style: solid;
+    border-radius:10px; }
