--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -4,3 +4,6 @@ h2 { font-family: Lobster, monospace; }
 .smaller-image{width:100px;}
 .thick-green-border { border-color: green; border-width: 10px; border-style: solid;
     border-radius:50%; }
+.silver-background{
+  background-color:silver;
+}
