Basic CSS: Use an id Attribute to Style an Element

--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -7,3 +7,6 @@ h2 { font-family: Lobster, monospace; }
 .silver-background{
   background-color:silver;
 }
+#cat-photo-form {
+  background-color: green;
+}
