Basic CSS: Adjust the Padding of an Element

--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -10,3 +10,9 @@ h2 { font-family: Lobster, monospace; }
 #cat-photo-form {
   background-color: green;
 }
+
+.injected-text { margin-bottom: -25px; text-align: center; padding-top: 20px;}
+.box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
+.yellow-box { background-color: yellow; padding: 10px }
+.red-box { background-color: crimson; color: #fff; padding: 20px; margin-top: 1.67em; margin-bottom: 1.67em; }
+.blue-box { background-color: blue; color: #fff; padding: 20px; margin-top: 1.67em; margin-bottom: 1.67em;}
