--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -3,26 +3,25 @@
 <!--1.  Basic CSS: Import a Google Font -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
 <h2 class="red-text">CatPhotoApp</h2>
-
 <a href="#">
-    <img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+    <img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat"
+        alt="A cute orange cat lying on its back.">
 </a>
-
 <div class="silver-background">
     <p>Things cats love:</p>
     <ul>
-      <li>cat nip</li>
-      <li>laser pointers</li>
-      <li>lasagna</li>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
     </ul>
     <p>Top 3 things cats hate:</p>
     <ol>
-      <li>flea treatment</li>
-      <li>thunder</li>
-      <li>other cats</li>
+        <li>flea treatment</li>
+        <li>thunder</li>
+        <li>other cats</li>
     </ol>
-  </div>
-  <form id="cat-photo-form" action="/submit-cat-photo">
+</div>
+<form id="cat-photo-form" action="/submit-cat-photo">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
     <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
     <label><input type="checkbox" name="personality" checked> Loving</label>
@@ -30,4 +29,11 @@
     <label><input type="checkbox" name="personality"> Energetic</label><br>
     <input type="text" placeholder="cat photo URL" required>
     <button type="submit">Submit</button>
-  </form>
+</form>
+
+<h5 class="injected-text">margin</h5>
+
+<div class="box yellow-box">
+    <h5 class="box red-box">padding</h5>
+    <h5 class="box blue-box">padding</h5>
+</div>
