--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -13,6 +13,16 @@ h2 { font-family: Lobster, monospace; }
 
 .injected-text { margin-bottom: -25px; text-align: center; padding-top: 20px;}
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
-.yellow-box { background-color: yellow; padding: 10px }
-.red-box { background-color: crimson; color: #fff; padding: 20px; margin: -15px; }
-.blue-box { background-color: blue; color: #fff; padding: 20px; margin: -15px;}
+.yellow-box { background-color: yellow; padding: 30px }
+.red-box { background-color: crimson; color: #fff;
+    padding-top: 40px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+}
+.blue-box { background-color: blue; color: #fff;
+    padding-top: 40px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+}
