--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -15,14 +15,14 @@ h2 { font-family: Lobster, monospace; }
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
 .yellow-box { background-color: yellow; padding: 30px }
 .red-box { background-color: crimson; color: #fff;
-    padding-top: 40px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    padding-left: 40px;
+    margin-top: 40px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
 }
 .blue-box { background-color: blue; color: #fff;
-    padding-top: 40px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    padding-left: 40px;
+    margin-top: 40px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
 }
