--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -15,8 +15,8 @@ h2 { font-family: Lobster, monospace; }
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
 .yellow-box { background-color: yellow; padding: 30px }
 .red-box { background-color: crimson; color: #fff;
-    padding: 20px 40px 20px 40px;
+    margin: 20px 40px 20px 40px;
 }
 .blue-box { background-color: blue; color: #fff;
-    padding: 40px 20px 20px 40px;
+    margin: 40px 20px 20px 40px;
 }
