--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -20,3 +20,6 @@ h2 { font-family: Lobster, monospace; }
 .blue-box { background-color: blue; color: #fff;
     margin: 40px 20px 20px 40px;
 }
+[type='checkbox'] {
+  margin: 10px 0px 15px 0px;
+}
