--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -15,7 +15,7 @@ h2 { font-family: Lobster, monospace; }
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
 .yellow-box { background-color: yellow; padding: 30px }
 .red-box { background-color: crimson; color: #fff;
-    margin: 20px 40px 20px 40px;
+    margin: 20px 40px 20px 40px;padding: 1.5em;
 }
 .blue-box { background-color: blue; color: #fff;
     margin: 40px 20px 20px 40px;
