--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -2,7 +2,10 @@
 
 <!--1.  Basic CSS: Import a Google Font -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
-<h2 class="red-text">CatPhotoApp</h2>
+<div class="body">
+    <h1 style="color: white;" id="orange-text" class="pink-text blue-text">Hello World!</h1>
+</div>
+<h2 class="pink-text blue-text">CatPhotoApp</h2>
 <a href="#">
     <img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat"
         alt="A cute orange cat lying on its back.">
