--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -1,3 +1,8 @@
+.body {
+  background-color: black;
+  font-family: monospace;
+  color: green;
+}
 
 h2 { font-family: Lobster, monospace; }
 .red-text { color: red; }
@@ -20,6 +25,21 @@ h2 { font-family: Lobster, monospace; }
 .blue-box { background-color: blue; color: #fff;
     margin: 40px 20px 20px 40px;
 }
+.pink-text {
+  color: pink;
+}
+.blue-text {
+  color: blue;
+}
 [type='checkbox'] {
   margin: 10px 0px 15px 0px;
+}
+#orange-text {
+  color: orange;
+}
+.pink-text {
+  color: pink;
+}
+.blue-text {
+  color: blue;
 }
