--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -26,7 +26,7 @@ h2 { font-family: Lobster, monospace; }
     margin: 40px 20px 20px 40px;
 }
 .pink-text {
-  color: pink;
+  color: pink !important;
 }
 .blue-text {
   color: blue;
