--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -4,6 +4,10 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
 <div class="body">
     <h1 style="color: white;" id="orange-text" class="pink-text blue-text">Hello World!</h1>
+    <h1 class="red-text">I am red!</h1>
+    <h1 class="green-text">I am green!</h1>
+    <h1 class="dodger-blue-text">I am dodger blue!</h1>
+    <h1 class="orange-text">I am orange!</h1>
 </div>
 <h2 class="pink-text blue-text">CatPhotoApp</h2>
 <a href="#">
