--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -5,16 +5,17 @@
 }
 
 h2 { font-family: Lobster, monospace; }
+
+.red-text { color: #FF0000; }
+.green-text { color: #00FF00; }
+.dodger-blue-text { color: #1E90FF; }
+.orange-text { color: #FFA500; }
+
 .red-text { color: red; }
 .smaller-image{width:100px;}
-.thick-green-border { border-color: green; border-width: 10px; border-style: solid;
-    border-radius:50%; }
-.silver-background{
-  background-color:silver;
-}
-#cat-photo-form {
-  background-color: green;
-}
+.thick-green-border { border-color: green; border-width: 10px; border-style: solid; border-radius:50%; }
+.silver-background{ background-color:silver; }
+#cat-photo-form { background-color: green; }
 
 .injected-text { margin-bottom: -25px; text-align: center; padding-top: 20px;}
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
