Basic CSS: Use Abbreviated Hex Code

--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -6,10 +6,10 @@
 
 h2 { font-family: Lobster, monospace; }
 
-.red-text { color: #FF0000; }
-.green-text { color: #00FF00; }
-.dodger-blue-text { color: #1E90FF; }
-.orange-text { color: #FFA500; }
+.red-text { color: #F00; }
+.fuchsia-text { color: #F0F; }
+.cyan-text { color: #0FF; }
+.green-text { color: #0F0; }
 
 .red-text { color: red; }
 .smaller-image{width:100px;}
