Basic CSS: Use RGB to Mix Colors

--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -5,9 +5,12 @@
 <div class="body">
     <h1 style="color: white;" id="orange-text" class="pink-text blue-text">Hello World!</h1>
     <h1 class="red-text">I am red!</h1>
-    <h1 class="fuchsia-text">I am green!</h1>
-    <h1 class="cyan-text">I am dodger blue!</h1>
-    <h1 class="green-text">I am orange!</h1>
+
+<h1 class="orchid-text">I am orchid!</h1>
+
+<h1 class="sienna-text">I am sienna!</h1>
+
+<h1 class="blue-text">I am blue!</h1>
 </div>
 <h2 class="pink-text blue-text">CatPhotoApp</h2>
 <a href="#">
