--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -1,15 +1,15 @@
 .body {
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   font-family: monospace;
   color: green;
 }
 
 h2 { font-family: Lobster, monospace; }
 
-.red-text { color: #F00; }
-.fuchsia-text { color: #F0F; }
-.cyan-text { color: #0FF; }
-.green-text { color: #0F0; }
+.red-text { color: rgb(255, 0, 0); }
+.orchid-text { color: rgb(218, 112, 214); }
+.sienna-text { color: rgb(160, 82, 45); }
+.blue-text { color: rgb(0, 0, 255); }
 
 .red-text { color: red; }
 .smaller-image{width:100px;}
