--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -1,15 +1,11 @@
-.body {
-  background-color: rgb(0, 0, 0);
-  font-family: monospace;
-  color: green;
-}
+.body { background-color: rgb(0, 0, 0); font-family: monospace; color: green; }
 
 h2 { font-family: Lobster, monospace; }
 
-.red-text { color: rgb(255, 0, 0); }
-.orchid-text { color: rgb(218, 112, 214); }
-.sienna-text { color: rgb(160, 82, 45); }
-.blue-text { color: rgb(0, 0, 255); }
+.red-text { color: #f00; }
+.orchid-text { color: #f0f; }
+.sienna-text { color: #0ff; }
+.blue-text { color: #0f0; }
 
 .red-text { color: red; }
 .smaller-image{width:100px;}
