Basic CSS: Attach a Fallback value to a CSS Variable

--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -2,7 +2,7 @@
 
 <!--1.  Basic CSS: Import a Google Font -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
-<div class="body">
+<!-- <div class="body">
     <h1 style="color: white;" id="orange-text" class="pink-text blue-text">Hello World!</h1>
     <h1 class="red-text">I am red!</h1>
 
@@ -46,4 +46,28 @@
 <div class="box yellow-box">
     <h5 class="box red-box">padding</h5>
     <h5 class="box blue-box">padding</h5>
-</div>
+</div> -->
+  <div class="penguin">
+    <div class="penguin-bottom">
+      <div class="right-hand"></div>
+      <div class="left-hand"></div>
+      <div class="right-feet"></div>
+      <div class="left-feet"></div>
+    </div>
+    <div class="penguin-top">
+      <div class="right-cheek"></div>
+      <div class="left-cheek"></div>
+      <div class="belly"></div>
+      <div class="right-eye">
+        <div class="sparkle"></div>
+      </div>
+      <div class="left-eye">
+        <div class="sparkle"></div>
+      </div>
+      <div class="blush-right"></div>
+      <div class="blush-left"></div>
+      <div class="beak-top"></div>
+      <div class="beak-bottom"></div>
+    </div>
+  </div>
+  
