--- a/src/app/routes/basic-css/basic-css.component.html
+++ b/src/app/routes/basic-css/basic-css.component.html
@@ -47,7 +47,7 @@
     <h5 class="box red-box">padding</h5>
     <h5 class="box blue-box">padding</h5>
 </div> -->
-  <div class="penguin">
+  <!-- <div class="penguin">
     <div class="penguin-bottom">
       <div class="right-hand"></div>
       <div class="left-hand"></div>
@@ -69,5 +69,5 @@
       <div class="beak-top"></div>
       <div class="beak-bottom"></div>
     </div>
-  </div>
-  
+  </div> -->
+  <div class="red-box"></div>
