--- a/src/app/routes/basic-css/basic-css.component.scss
+++ b/src/app/routes/basic-css/basic-css.component.scss
@@ -16,9 +16,7 @@ h2 { font-family: Lobster, monospace; }
 .injected-text { margin-bottom: -25px; text-align: center; padding-top: 20px;}
 .box { border-style: solid; border-color: black; border-width: 5px; text-align: center; }
 .yellow-box { background-color: yellow; padding: 30px }
-.red-box { background-color: crimson; color: #fff;
-    margin: 20px 40px 20px 40px;padding: 1.5em;
-}
+.red-box { background-color: crimson; color: #fff; margin: 20px 40px 20px 40px;padding: 1.5em; }
 .blue-box { background-color: blue; color: #fff;
     margin: 40px 20px 20px 40px;
 }
@@ -190,3 +188,10 @@ h2 { font-family: Lobster, monospace; }
 	height: 10%;
 	border-radius: 50%;
 }
+  .red-box {
+    --red-color: red;
+    background: red;
+    background: var(--red-color);
+    height: 200px;
+    width:200px;
+  }
