applied-visual-design component generated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       <li>
         <a routerLink="/basiccss">Basic Css</a>
       </li>
+      <li>
+        <a routerLink="/appliedvisualdesign">Applied Visual Design</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
