--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -3,7 +3,7 @@
   <div class="fullCard">
     <div class="cardContent">
       <div class="cardText">
-        <h4>Google</h4>
+        <h4><s>Google</s> Alphabet</h4>
         <p>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</p>
       </div>
       <div class="cardLinks">
