--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,22 +1,25 @@
-
-    h4 {
-  text-align: center;
-  height: 25px;
-    }
-    p {
-  text-align: justify;
-    }
-    .links {
-      margin-right: 20px;
-  
-    }
-    .fullCard {
-        width:245px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      margin: 10px 5px;
-      padding: 4px;
-    }
-    .cardContent {
-      padding: 10px;
-    }
+h4 {
+    text-align: center;
+    background-color: rgba(45, 45, 45, 0.1);
+    padding:10px;
+  }
+  p {
+    text-align: justify;
+  }
+  .links {
+    text-align: left;
+    color: black;
+  }
+  .fullCard {
+    width: 245px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px 5px;
+    padding: 4px;
+  }
+  .cardContent {
+    padding: 10px;
+  }
+  .cardText {
+    margin-bottom: 30px;
+  }
