--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -2,6 +2,7 @@ h4 {
     text-align: center;
     background-color: rgba(45, 45, 45, 0.1);
     padding:10px;
+    font-size:27px;
   }
   p {
     text-align: justify;
