Applied Visual Design: Add a box-shadow to a Card-like Element

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,5 +1,5 @@
 
-<div class="fullCard">
+<div class="fullCard" id="thumbnail">
   <div class="cardContent">
     <div class="cardText">
       <h4>Alphabet</h4>
