--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -10,9 +10,8 @@ h4 {
   p {
     text-align: justify;
   }
-  .links {
-    text-align: left;
-    color: black;
+  .links{
+    opacity:0.7;
   }
   .fullCard {
     width: 245px;
