Applied Visual Design: Set the font-size for Multiple Heading Elements

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,5 +1,4 @@
-
-<div class="fullCard" id="thumbnail">
+<!-- <div class="fullCard" id="thumbnail">
   <div class="cardContent">
     <div class="cardText">
       <h4>Alphabet</h4>
@@ -11,4 +10,11 @@
       <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
     </div>
   </div>
-</div>
+</div> -->
+
+<h1>This is h1 text</h1>
+<h2>This is h2 text</h2>
+<h3>This is h3 text</h3>
+<h4>This is h4 text</h4>
+<h5>This is h5 text</h5>
+<h6>This is h6 text</h6>
