--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,29 +1,35 @@
-#thumbnail{
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  }
-h4 {
-    text-align: center;
-    background-color: rgba(45, 45, 45, 0.1);
-    padding:10px;
-    font-size:27px;
-    text-transform:uppercase;
-  }
-  p {
-    text-align: justify;
-  }
-  .links{
-    opacity:0.7;
-  }
-  .fullCard {
-    width: 245px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 10px 5px;
-    padding: 4px;
-  }
-  .cardContent {
-    padding: 10px;
-  }
-  .cardText {
-    margin-bottom: 30px;
-  }
+// #thumbnail{
+//     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+//   }
+// h4 {
+//     text-align: center;
+//     background-color: rgba(45, 45, 45, 0.1);
+//     padding:10px;
+//     font-size:27px;
+//     text-transform:uppercase;
+//   }
+//   p {
+//     text-align: justify;
+//   }
+//   .links{
+//     opacity:0.7;
+//   }
+//   .fullCard {
+//     width: 245px;
+//     border: 1px solid #ccc;
+//     border-radius: 5px;
+//     margin: 10px 5px;
+//     padding: 4px;
+//   }
+//   .cardContent {
+//     padding: 10px;
+//   }
+//   .cardText {
+//     margin-bottom: 30px;
+//   }
+h1{font-size: 68px;}
+h2{font-size: 52px;}
+h3{font-size: 40px;}
+h4{font-size: 32px;}
+h5{font-size: 21px;}
+h6{font-size: 14px;}
