Applied Visual Design: Adjust the Hover State of an Anchor Tag

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -18,6 +18,7 @@
 <h4>This is h4 text</h4>
 <h5>This is h5 text</h5>
 <h6>This is h6 text</h6> -->
-<p>
+<!-- <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-  </p>
+  </p> -->
+  <a href="/" target="_blank">CatPhotoApp</a>
