Applied Visual Design: Change an Element's Relative Position

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -38,8 +38,12 @@
 //     font-size: 16px;
 //     line-height:25px;
 //   }
-a {
-    color: #000;
-  &:hover {
-    color: blue;
-}}
+// a {
+//     color: #000;
+//   &:hover {
+//     color: blue;
+// }}
+h2 {
+    position: relative;
+    top: 15px;
+}
