--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -21,4 +21,7 @@
 <!-- <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
   </p> -->
-  <a href="/" target="_blank">CatPhotoApp</a>
+  <!-- <a href="/" target="_blank">CatPhotoApp</a> -->
+  <h1>On Being Well-Positioned</h1>
+  <h2>Move me!</h2>
+  <p>I still think the h2 is where it normally sits.</p>
