--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -22,6 +22,13 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
   </p> -->
   <!-- <a href="/" target="_blank">CatPhotoApp</a> -->
-  <h1>On Being Well-Positioned</h1>
+  <!-- <h1>On Being Well-Positioned</h1>
   <h2>Move me!</h2>
-  <p>I still think the h2 is where it normally sits.</p>
+  <p>I still think the h2 is where it normally sits.</p> -->
+  <section>
+    <form id="searchbar">
+      <label for="search">Search:</label>
+      <input type="search" id="search" name="search">
+      <input type="submit" name="submit" value="Go!">
+    </form>
+  </section>
