--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -25,10 +25,20 @@
   <!-- <h1>On Being Well-Positioned</h1>
   <h2>Move me!</h2>
   <p>I still think the h2 is where it normally sits.</p> -->
-  <section>
+  <!-- <section>
     <form id="searchbar">
       <label for="search">Search:</label>
       <input type="search" id="search" name="search">
       <input type="submit" name="submit" value="Go!">
     </form>
-  </section>
+  </section> -->
+  <header>
+    <h1>Welcome!</h1>
+    <nav id="navbar">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <p>I shift up when the #navbar is fixed to the browser window.</p>
