--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -48,11 +48,33 @@
 //     left:15px;
 //     bottom:10px;
 // }
-#searchbar {
-    position:absolute;
-    top:50px;
-    right:50px;
-}
-section {
-  position: relative;
-}
+// #searchbar {
+//     position:absolute;
+//     top:50px;
+//     right:50px;
+// }
+// section {
+//   position: relative;
+// }
+body {
+    min-height: 150vh;
+  }
+  h1{margin-top: 50px;}
+  #navbar {
+    position:fixed;
+    top:0;
+    left:200px;
+    width: 100%;
+    background-color: #767676;
+  }
+  nav ul {
+    margin: 0px;
+    padding: 5px 0px 5px 30px;
+  }
+  nav li {
+    display: inline;
+    margin-right: 20px;
+  }
+  a {
+    text-decoration: none;
+  }
