--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -34,11 +34,12 @@
   </section> -->
   <header>
     <h1>Welcome!</h1>
-    <nav id="navbar">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </nav>
   </header>
-  <p>I shift up when the #navbar is fixed to the browser window.</p>
+  <section id="left">
+    <h2>Content</h2>
+    <p>Good stuff</p>
+  </section>
+  <aside id="right">
+    <h2>Sidebar</h2>
+    <p>Links</p>
+  </aside>
