--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -32,7 +32,7 @@
       <input type="submit" name="submit" value="Go!">
     </form>
   </section> -->
-  <header>
+  <!-- <header>
     <h1>Welcome!</h1>
   </header>
   <section id="left">
@@ -42,4 +42,6 @@
   <aside id="right">
     <h2>Sidebar</h2>
     <p>Links</p>
-  </aside>
+  </aside> -->
+  <div class="first"></div>
+<div class="second"></div>
