Applied Visual Design: Center an Element Horizontally Using the margin Property

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -43,5 +43,5 @@
     <h2>Sidebar</h2>
     <p>Links</p>
   </aside> -->
-  <div class="first"></div>
-<div class="second"></div>
+  <!-- <div class="first"></div> -->
+<div></div>
