--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -92,20 +92,21 @@
 //     background-color: #ccc;
 //   }
 div {
-    width: 60%;
-    height: 200px;
-    margin-top: 20px;
+  background-color: blue;
+  height: 100px;
+  width: 100px;
+margin: auto;
   }
 
-  .first {
-    background-color: red;
-    position: absolute;
-    z-index:2;
-  }
-  .second {
-    background-color: blue;
-    position: absolute;
-    left: 300px;
-    top: 50px;
-    z-index: 1;
-  }
+  // .first {
+  //   background-color: red;
+  //   position: absolute;
+  //   z-index:2;
+  // }
+  // .second {
+  //   background-color: blue;
+  //   position: absolute;
+  //   left: 300px;
+  //   top: 50px;
+  //   z-index: 1;
+  // }
