--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -44,4 +44,6 @@
     <p>Links</p>
   </aside> -->
   <!-- <div class="first"></div> -->
-<div></div>
+<!-- <div></div> -->
+<div class="blue"></div>
+<div class="yellow"></div>
