Applied Visual Design: Learn about Tertiary Colors

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -45,5 +45,8 @@
   </aside> -->
   <!-- <div class="first"></div> -->
 <!-- <div></div> -->
-<div class="blue"></div>
-<div class="yellow"></div>
+<!-- <div class="blue"></div>
+<div class="yellow"></div> -->
+<div class="orange"></div>
+<div class="cyan"></div>
+<div class="raspberry"></div>
