--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,129 +1,19 @@
-// #thumbnail{
-//     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-//   }
-// h4 {
-//     text-align: center;
-//     background-color: rgba(45, 45, 45, 0.1);
-//     padding:10px;
-//     font-size:27px;
-//     text-transform:uppercase;
-//   }
-//   p {
-//     text-align: justify;
-//   }
-//   .links{
-//     opacity:0.7;
-//   }
-//   .fullCard {
-//     width: 245px;
-//     border: 1px solid #ccc;
-//     border-radius: 5px;
-//     margin: 10px 5px;
-//     padding: 4px;
-//   }
-//   .cardContent {
-//     padding: 10px;
-//   }
-//   .cardText {
-//     margin-bottom: 30px;
-//   }
-// h1{font-size: 68px; font-weight:800;}
-// h2{font-size: 52px; font-weight:600;}
-// h3{font-size: 40px; font-weight:500;}
-// h4{font-size: 32px; font-weight:400;}
-// h5{font-size: 21px; font-weight:300;}
-// h6{font-size: 14px; font-weight:200;}
-
-// p {
-//     font-size: 16px;
-//     line-height:25px;
-//   }
-// a {
-//     color: #000;
-//   &:hover {
-//     color: blue;
-// }}
-// h2 {
-//     position: relative;
-//     left:15px;
-//     bottom:10px;
-// }
-// #searchbar {
-//     position:absolute;
-//     top:50px;
-//     right:50px;
-// }
-// section {
-//   position: relative;
-// }
-// body {
-//     min-height: 150vh;
-//   }
-//   h1{margin-top: 50px;}
-//   #navbar {
-//     position:fixed;
-//     top:0;
-//     left:200px;
-//     width: 100%;
-//     background-color: #767676;
-//   }
-//   nav ul {
-//     margin: 0px;
-//     padding: 5px 0px 5px 30px;
-//   }
-//   nav li {
-//     display: inline;
-//     margin-right: 20px;
-//   }
-//   a {
-//     text-decoration: none;
-//   }
-
-// #left {
-//     float :left;
-//     width: 50%;
-//   }
-//   #right {
-//     float :right;
-//     width: 40%;
-//   }
-//   aside, section {
-//     padding: 2px;
-//     background-color: #ccc;
-//   }
-// div {
-//   background-color: blue;
-//   height: 100px;
-//   width: 100px;
-// margin: auto;
-//   }
-
-  // .first {
-  //   background-color: red;
-  //   position: absolute;
-  //   z-index:2;
-  // }
-  // .second {
-  //   background-color: blue;
-  //   position: absolute;
-  //   left: 300px;
-  //   top: 50px;
-  //   z-index: 1;
-  // }
-
-  // .blue {
-  //   background-color: blue;
-  // }
-  // .yellow {
-  //   background-color: yellow;
-  // }
-  // div {
-  //   display: inline-block;
-  //   height: 100px;
-  //   width: 100px;
-  // }
-  div { height: 100px; width: 100px; margin-bottom: 5px; }
-
-  .orange { background-color: #FF7F00; }
-  .cyan { background-color: #00FFFF; }
-  .raspberry { background-color: #FF007F; }
+body {
+  background-color: white;
+}
+header {
+  background-color: #09A7A1;
+  color: white;
+  padding: 0.25em;
+}
+h2 {
+  color: #09A7A1;
+}
+button {
+  background-color: #FF790E;
+}
+footer {
+  background-color: #09A7A1;
+  color: white;
+  padding: 0.5em;
+}
