Applied Visual Design: Adjust the Hue of a Color

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,19 +1,18 @@
-body {
-  background-color: white;
-}
-header {
-  background-color: #09A7A1;
-  color: white;
-  padding: 0.25em;
-}
-h2 {
-  color: #09A7A1;
-}
-button {
-  background-color: #FF790E;
-}
-footer {
-  background-color: #09A7A1;
-  color: white;
-  padding: 0.5em;
-}
+
+  .green {
+    background-color: hsl(120, 100%, 50%);
+  }
+
+  .cyan {
+    background-color:hsl(180, 100%, 50%);
+  }
+
+  .blue {
+    background-color: hsl(240, 100%, 50%);
+  }
+
+  div {
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+  }
