--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,18 +1,28 @@
+header {
+  background-color: hsl(180, 90%, 35%);
+  color: #FFFFFF;
+}
 
-  .green {
-    background-color: hsl(120, 100%, 50%);
-  }
+nav {
+background-color:hsl(180, 80%, 25%);
+}
 
-  .cyan {
-    background-color:hsl(180, 100%, 50%);
-  }
+h1 {
+  text-indent: 10px;
+  padding-top: 10px;
+}
 
-  .blue {
-    background-color: hsl(240, 100%, 50%);
-  }
+nav ul {
+  margin: 0px;
+  padding: 5px 0px 5px 30px;
+}
 
-  div {
-    display: inline-block;
-    height: 100px;
-    width: 100px;
-  }
+nav li {
+  display: inline;
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
