--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,14 +1,20 @@
-
-div{
-  border-radius: 20px;
-  width: 70%;
-  height: 400px;
-  margin:  50 auto;
-  background: repeating-linear-gradient(
-    45deg,
-    yellow 0px,
-    yellow 40px,
-    black 40px,
-    black 80px
+.ball {
+  width: 40px;
+  height: 40px;
+  margin: 50 auto;
+  position: fixed;
+  background: linear-gradient(
+    35deg,
+    #ccffff,
+    #ffcccc
   );
+  border-radius: 50%;
+}
+#ball1 {
+  left: 20%;
+}
+#ball2 {
+  left:30%;
+  top: 11px;
+transform: scale(1.5);
 }
