--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,20 +1,14 @@
-.ball {
-  width: 40px;
-  height: 40px;
-  margin: 50 auto;
-  position: fixed;
+div {
+  width: 70%;
+  height: 100px;
+  margin:  50px auto;
   background: linear-gradient(
-    35deg,
-    #ccffff,
-    #ffcccc
+    53deg,
+    #ccfffc,
+    #ffcccf
   );
-  border-radius: 50%;
 }
-#ball1 {
-  left: 20%;
-}
-#ball2 {
-  left:30%;
-  top: 11px;
-transform: scale(1.5);
+div:hover {
+  transform: scale(1.1);
+
 }
