--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -2,13 +2,11 @@ div {
   width: 70%;
   height: 100px;
   margin:  50px auto;
-  background: linear-gradient(
-    53deg,
-    #ccfffc,
-    #ffcccf
-  );
 }
-div:hover {
-  transform: scale(1.1);
-
+#top {
+  background-color: red;
+}
+#bottom {
+  background-color: blue;
+transform: skewX(24deg);
 }
