--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,13 +1,13 @@
-div {
-  width: 70%;
+.center {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100px;
   height: 100px;
-  margin:  50px auto;
-}
-#top {
-  background-color: red;
-  transform: skewY(-10deg);
-}
-#bottom {
-  background-color: blue;
-transform: skewX(24deg);
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 25px 10px 0 0 blue;
 }
