--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -8,6 +8,7 @@ button {
 button:hover {
   animation-name: background-color;
   animation-duration: 500ms;
+  animation-fill-mode: forwards;
 }
 
 @keyframes background-color{
