--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,31 +1,23 @@
-div {
-  height: 40px;
-  width: 70%;
-  background: black;
-  margin: 50px auto;
-  border-radius: 5px;
-  position: relative;
-}
 
-#rect {
-  animation-name: rainbow;
-  animation-duration: 4s;
-}
+  #ball {
+    width: 70px;
+    height: 70px;
+    margin: 50px auto;
+    position: fixed;
+    left: 20%;
+    border-radius: 50%;
+    background: linear-gradient(
+      35deg,
+      #ccffff,
+      #ffcccc
+    );
+    animation-name: fade;
+    animation-duration: 3s;
+  }
 
-@keyframes rainbow {
-  0% {
-    background-color: blue;
-    top: 0px;
-    left: 0px;
+  @keyframes fade {
+    50% {
+      left: 60%;
+opacity:0.1;
+    }
   }
-  50% {
-    background-color: green;
-    top: 50px;
-    left: 25px;
-  }
-  100% {
-    background-color: yellow;
-    top: 0px;
-    left: -25px;
-  }
-}
