Applied Visual Design: Animate Elements at Variable Rates

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,2 +1,4 @@
-<div class="back"></div>
-<div class="heart"></div>
+
+<div id="back"></div>
+<div class="star-1 stars"></div>
+<div class="star-2 stars"></div>
