--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -1,4 +1,40 @@
-.back {
+.stars {
+  background-color: white;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+}
+
+.star-1 {
+  margin-top: 1%;
+  margin-left: 60%;
+  animation-name: twinkle-1;
+  animation-duration: 1s;
+}
+
+.star-2 {
+  margin-top: 2%;
+  margin-left: 25%;
+  animation-name: twinkle-2;
+  animation-duration: 1s;
+}
+
+@keyframes twinkle-1 {
+  50% {
+    transform: scale(0.5);
+    opacity: 0.5;
+  }
+}
+
+@keyframes twinkle-2 {
+  20% {
+    transform: scale(0.5);
+    opacity: 0.5;
+  }
+}
+
+#back {
   position: fixed;
   padding: 0;
   margin: 0;
@@ -6,60 +42,5 @@
   left: 300px;
   width: 100%;
   height: 100%;
-  background: white;
-  animation-name: backdiv;
-  animation-duration: 1s;
-animation-iteration-count:infinite;
-}
-
-.heart {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 300px;
-  background-color: pink;
-  height: 50px;
-  width: 50px;
-  transform: rotate(-45deg);
-  animation-name: beat;
-  animation-duration: 1s;
-animation-iteration-count:infinite;
-
-}
-.heart:after {
-  background-color: pink;
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  top: 0px;
-  left: 25px;
-}
-.heart:before {
-  background-color: pink;
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  top: -25px;
-  left: 0px;
-}
-
-@keyframes backdiv {
-  50% {
-    background: #ffe6f2;
-  }
-}
-
-@keyframes beat {
-  0% {
-    transform: scale(1) rotate(-45deg);
-  }
-  50% {
-    transform: scale(0.6) rotate(-45deg);
-  }
+  background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6);
 }
