Applied Visual Design: Change Animation Timing with Keywords

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,5 +1,3 @@
 
-<div id="back"></div>
-<div class="star-1 stars"></div>
-<div class="star-2 stars"></div>
-<div class="star-3 stars"></div>
+<div class="balls" id="ball1"></div>
+<div class="balls" id="ball2"></div>
