Applied Visual Design: Use a Bezier Curve to Move a Graphic

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,3 +1,2 @@
-
-<div class="balls" id="ball1"></div>
-<div class="balls" id="ball2"></div>
+<div class="balls" id= "red"></div>
+<div class="balls" id= "blue"></div>
