Applied Visual Design: Make Motion More Natural Using a Bezier Curve

--- a/src/app/routes/applied-visual-design/applied-visual-design.component.html
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.html
@@ -1,2 +1,3 @@
-<div class="balls" id= "red"></div>
-<div class="balls" id= "blue"></div>
+<div class="balls" id="red"></div>
+<div class="balls" id="blue"></div>
+<div class="balls" id="green"></div>
