--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       <li>
         <a routerLink="/appliedvisualdesign">Applied Visual Design</a>
       </li>
+      <li>
+        <a routerLink="/appliedaccessibility">Applied Accessibility</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
