Applied Accessibility: Use tabindex to Add Keyboard Focus to an Element

--- a/src/app/routes/applied-accessibility/applied-accessibility.component.html
+++ b/src/app/routes/applied-accessibility/applied-accessibility.component.html
@@ -1,4 +1,1 @@
-<header>
-    <h1>Danger!</h1>
-  </header>
-  <button>Delete Internet</button>
+<p tabindex="0">Instructions: Fill in ALL your information then click <b>Submit</b></p>
