--- a/src/app/routes/applied-accessibility/applied-accessibility.component.scss
+++ b/src/app/routes/applied-accessibility/applied-accessibility.component.scss
@@ -1,6 +1,3 @@
-button {
-    color: #003366;
-    background-color: #FFFF33;
-    font-size: 14px;
-    padding: 10px;
-  }
+p:focus {
+  background-color: yellow;
+}
