Responsive Web Design Principles: Create a Media Query

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
       <li>
         <a routerLink="/appliedaccessibility">Applied Accessibility</a>
       </li>
+      <li>
+        <a routerLink="/responsivewebdesignprinciples">Responsive Web Design Principles</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
