Responsive Web Design Principles: Make Typography Responsive

--- a/src/app/routes/responsive-web-design-principles/responsive-web-design-principles.component.scss
+++ b/src/app/routes/responsive-web-design-principles/responsive-web-design-principles.component.scss
@@ -1,9 +1,2 @@
-.responsive-img {
-    max-width: 100%;
-      height: auto;
-    
-    }
-    
-    img {
-      width: 600px;
-    }
+h2{width:80vw;}
+p{width:75vmin;}
