CSS Flexbox: Use display: flex to Position Two Boxes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
       <li>
         <a routerLink="/responsivewebdesignprinciples">Responsive Web Design Principles</a>
       </li>
+      <li>
+        <a routerLink="/cssflexbox">CSS Flexbox</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
