CSS Grid: Create Your First CSS Grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
       <li>
         <a routerLink="/cssflexbox">CSS Flexbox</a>
       </li>
+      <li>
+        <a routerLink="/cssgrid">CSS Grid</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
