--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
       <li>
         <a routerLink="/cssgrid">CSS Grid</a>
       </li>
+      <li>
+        <a routerLink="/basicjavascript">Basic Javascript</a>
+      </li>
     </ul>
   </nav>
   <section class="section-container">
